--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,13 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   lottie: ^3.1.2
-
   # File & Sharing
   pdf: ^3.10.8
   path_provider: ^2.1.2
   share_plus: ^7.2.2
+  image_picker: ^1.0.7
+  http: ^1.2.0
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
